--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ server.port=8090
 logging.file=log/bikeshop.log
 logging.file.max-history=5
 logging.file.max-size=10MB
+logging.level.root=INFO
 
 management.endpoint.httptrace.enabled=false
 # expose all actuator endpoints over http
